<resources>
    <string name="app_name">GeekNews</string>
    <string name="name">请输入用户名</string>
    <string name="psw">请输入密码</string>
    <string name="login_ok">登陆</string>
    <string name="app_name2">A pure reading App for you</string>
    <string name="zhihu">知乎日报</string>
    <string name="wechat">微信精选</string>
    <string name="gank">干货集中营</string>
    <string name="xitu">稀土掘金</string>
    <string name="v2ex">V2EX</string>
    <string name="zixun">资讯</string>
    <string name="on">选项</string>
    <string name="collect">收藏</string>
    <string name="settings">设置</string>
    <string name="about">关于</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Geek">GeekNbs</string>
    <string name="sections">来了老弟</string>
</resources>
