<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Activity.LoginActivity">

    <EditText
        android:layout_width="match_parent"
        android:id="@+id/et_name"
        android:hint="@string/name"
        android:layout_height="wrap_content" />
    <EditText
        android:layout_width="match_parent"
        android:id="@+id/et_psw"
        android:hint="@string/psw"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="wrap_content"
        android:id="@+id/btn"
        android:layout_marginTop="20dp"
        android:text="@string/login_ok"
        android:layout_height="wrap_content" />
</LinearLayout>